--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,5 @@
 configure(allprojects) { project ->
-    ext.baseCommonVersion="0.0.1-SNAPSHOT"
+    ext.baseCommonVersion="0.0.1"
     ext.springframworkVersion="4.2.5.RELEASE"
     ext.mysqlConnectorVersion="5.1.26"
     ext.dubboVersion="2.5.3"
