--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,5 +5,5 @@ configure(allprojects) { project ->
     ext.dubboVersion="2.5.3"
     ext.dubboZKClientVersion="0.4"
     ext.junitVersion="4.11"
-    ext.localMavenRepository="file://F:/devRepository/mavenRepository/"
+    ext.localMavenRepository="file://E:/mavenRepository/"
 }
