--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-.idea/*
+
+##eclipse##
+/bin/
+.project
+/.setting/
+.classpath
+target/
+
+##idea##
+/.idea/
 *.iml
-.gradle/*
+.gradle
+build/
+.svn/
+classes/
+out/
