--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
 
         compile(group: "own.jadezhang.base", name: "base-common-domain", version: "$baseCommonVersion")
 
+        compile 'com.alibaba:fastjson:1.2.7'
         //加载libs目录下所有的jar
         compile fileTree(dir: 'libs', include: ['*.jar'])
 
