--- a/learning-almond-mp/build.gradle
+++ b/learning-almond-mp/build.gradle
@@ -3,10 +3,12 @@ apply plugin: 'java'
 dependencies {
 
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
-
+    compile 'mysql:mysql-connector-java:5.1.26'
     compile 'com.baomidou:mybatis-plus:2.0.8'
     compile 'org.springframework:spring-context:4.2.5.RELEASE'
     compile 'org.springframework:spring-context-support:4.2.5.RELEASE'
+    compile 'org.springframework:spring-jdbc:4.2.5.RELEASE'
     compile 'org.springframework:spring-tx:4.2.5.RELEASE'
+
 
 }
