--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'learning-almond'
 include 'learning-almond-quartz'
 include 'learning-almond-mp'
+include 'learning-almond-security'
 
