--- a/learning-almond-mp/build.gradle
+++ b/learning-almond-mp/build.gradle
@@ -10,5 +10,7 @@ dependencies {
     compile 'org.springframework:spring-jdbc:4.2.5.RELEASE'
     compile 'org.springframework:spring-tx:4.2.5.RELEASE'
 
+    testCompile group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.3.5'
+
 
 }
